--- a/Pelican/7693096/etc/apache2/sites-available/pelican.conf
+++ b/Pelican/7693096/etc/apache2/sites-available/pelican.conf
@@ -1,5 +1,5 @@
     <VirtualHost *:80>
-        ServerName 10.61.66.171
+        ServerName [domanin]
         DocumentRoot "/var/www/pelican/public"
     
         AllowEncodedSlashes On
